# PowerClicker

./: .gitignore  CMakeLists.txt  Installer.py  PowerClicker_Installer.py  README.md
lib/: imgui.ini
src/: Context.cpp  Context.h  Keys.h  MouseAction.cpp  ToMilliseconds.cpp  Window.cpp  Window.h  WindowSize.cpp  WindowSize.h  main.cpp
